# SIENA

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 1efdf44b838c_add_escolas_module_tables.py  6e0c9914259d_create_identity_tables.py  a3b7c2d4e5f6_add_directory_module_tables.py  b4c8d5e6f7a8_add_enrollment_module_tables.py  c5d9e0f1a2b3_add_academico_module_tables.py  d6e0f1a2b3c4_add_avaliacoes_module_tables.py  e7f1a2b3c4d5_add_tenant_slug.py
backend/scripts/: seed_mvp.py  seed_test_users.py
backend/src/: main.py
backend/src/common/auth/: __init__.py  jwt.py  middleware.py  rbac.py
backend/src/common/database/: __init__.py  base.py  session.py
backend/src/common/events/: __init__.py  bus.py
backend/src/common/schemas/: __init__.py  pagination.py  responses.py
backend/src/common/utils/: password.py
backend/src/modules/academico/api/: dtos.py  router.py
backend/src/modules/academico/application/: seed.py  services.py
backend/src/modules/academico/infrastructure/: models.py  repository.py
backend/src/modules/avaliacoes/api/: dtos.py  import_router.py  router.py
backend/src/modules/avaliacoes/application/: import_service.py  seed.py  services.py
backend/src/modules/avaliacoes/infrastructure/: models.py  repository.py
backend/src/modules/directory/api/: dtos.py  import_router.py  router.py
backend/src/modules/directory/application/: import_service.py  seed.py  services.py
bd/: diagrama.css  diagrama.html  (+3 more)
(+104 files in other folders)
